--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/e/index.xhtml
@@ -196,6 +196,7 @@
                                         constraint: 'CoefficientFixedValue',
                                         option: {
                                             width: '178px',
+                                            decimallength: 2,
                                             placeholder: '#{i18n.getText('QMM017_16')}'
                                         },
                                         name: '#[QMM017_111]',
