qmm016: bug datepicker

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/j/qmm016.j.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/j/qmm016.j.style.css
@@ -11,3 +11,8 @@
 #J3_2 label {
 	display: block !important;
 }
+
+.datepicker-container.datepicker-dropdown {
+	top: 141px !important;
+	left: 264.75px !important;
+}
