--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
@@ -407,21 +407,23 @@
                 <div style="width: 130px; display: inline-block;"
                      data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM017_54')}</div>
                 <hr/>
-                <div data-bind="ntsComboBox: {
-                    width: '120px',
-                    name: '#[QMM017_55]',
-                    options: referenceMonthItem,
-                    optionsValue: 'value',
-                    visibleItemsCount: 13,
-                    value: referenceMonth,
-                    optionsText: 'name',
-                    enable: true,
-                    required: true,
-                    columns: [
-                        { prop: 'name', length: 6 },
-                    ]}">
+                <div style="width: 140px" class = "valign-center control-group style-normal">
+                    <div data-bind="ntsComboBox: {
+                        width: '120px',
+                        name: '#[QMM017_55]',
+                        options: referenceMonthItem,
+                        optionsValue: 'value',
+                        visibleItemsCount: 13,
+                        value: referenceMonth,
+                        optionsText: 'name',
+                        enable: true,
+                        required: true,
+                        columns: [
+                            { prop: 'name', length: 6 },
+                        ]}">
+                    </div>
+                    <span>#{i18n.getText('QMM017_56')}</span>
                 </div>
-                <div class = "row">#{i18n.getText('QMM017_56')}</div>
                 <div class = "row">#{i18n.getText('QMM017_57')}</div>
                 <div class = "row" data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM017_58')}</div>
                 <hr/>
