--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/h/index.xhtml
@@ -7,12 +7,12 @@
 <body>
 <ui:composition template="../../../../master/dialog.xhtml">
     <ui:define name="htmlHead">
-        <script>var dialogSize = { width: 570, height: 650 };</script>
-        <com:scriptfile set="IGNITE" />
-        <com:scriptfile path="../share/model.js" />
-        <com:scriptfile path="qmm017.h.vm.js" />
-        <com:stylefile path="qmm017.h.style.css" />
-        <com:scriptfile path="qmm017.h.start.js" />
+        <script>var dialogSize = {width: 570, height: 650};</script>
+        <com:scriptfile set="IGNITE"/>
+        <com:scriptfile path="../share/model.js"/>
+        <com:scriptfile path="qmm017.h.vm.js"/>
+        <com:stylefile path="qmm017.h.style.css"/>
+        <com:scriptfile path="qmm017.h.start.js"/>
     </ui:define>
     <ui:define name="content">
         <div id="contents-area" style="margin-left: 20px;">
@@ -20,15 +20,14 @@
             <div style="margin-top: 20px; min-width: 520px">
                 <div style="width: 130px; display: inline-block;"
                      data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM017_8')}</div>
-                <div style="display: inline-block;"
-                     data-bind="text: formulaCode"></div>
-                <span style="margin-left: 20px; width: 270px; vertical-align: text-bottom " class = "limited-label"
-                      data-bind="text: formulaName"></span>
+                <div style="display: inline-block;" data-bind="text: formulaCode"/>
+                <span style="margin-left: 20px; width: 270px; vertical-align: text-bottom " class="limited-label"
+                      data-bind="text: formulaName"/>
             </div>
             <div style="margin-top: 20px; min-width: 520px">
                 <div style="width: 130px;"
                      data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM017_12')}</div>
-                <div id ="H1_6"
+                <div id="H1_6"
                      data-bind="ntsDatePicker: {
 							name: '#[QMM017_12]',
 							value: startMonth,
@@ -36,26 +35,26 @@
 							valueFormat: 'YYYYMM',
 							required: true,
 							enable: true}"
-                     tabindex="1" />
-                <div style = "display: inline-block" data-bind = "text: displayStartJapanYearMonth"></div>
+                     tabindex="1"/>
+                <div style="display: inline-block" data-bind="text: displayStartJapanYearMonth"/>
             </div>
             <div style="margin-top: 20px; min-width: 520px">
                 <div style="width: 130px;"
                      data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM017_151')}</div>
-                <div style = "width: 280px;display: inline-flex; vertical-align: text-top">
-                    <div tabindex = "2" id = "H1_9"
+                <div style="width: 280px;display: inline-flex; vertical-align: text-top">
+                    <div tabindex="2" id="H1_9"
                          data-bind="ntsRadioBoxGroup: {
 										value: takeoverMethod,
 										enable: true,
 										options: takeoverItem,
 										optionsValue: 'value',
-										optionsText: 'name'}"></div>
+										optionsText: 'name'}"/>
                 </div>
             </div>
             <div style="margin-top: 20px; min-width: 520px">
                 <div style="width: 130px; margin-left: 150px;"
                      data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM017_17')}</div>
-                <div style = "display: inline-block" data-bind = "text: displaySettingMethod"></div>
+                <div style="display: inline-block" data-bind="text: displaySettingMethod"/>
             </div>
             <div data-bind="if: settingMethod() == 0" style="margin-top: 20px; min-width: 520px">
                 <div style="width: 130px; margin-left: 180px;"
@@ -90,9 +89,9 @@
             </div>
         </div>
         <div id="functions-area-bottom">
-            <button tabindex ="5" class="x-large proceed "
+            <button tabindex="5" class="x-large proceed "
                     data-bind="click: addNewHistory, enable: $root.errors.isEmpty">#{i18n.getText('QMM017_153')}</button>
-            <button tabindex ="6" data-bind="click: cancel">#{i18n.getText('QMM017_104')}</button>
+            <button tabindex="6" data-bind="click: cancel">#{i18n.getText('QMM017_104')}</button>
         </div>
     </ui:define>
 </ui:composition>
