--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/index.xhtml
@@ -45,7 +45,7 @@
             </div>
             <div style="border-bottom: #CCCCCC 1px solid; width: 840px; margin-top:-10px; margin-bottom: 10px"></div>
             <div>
-                <div id="C2_3" style="width: 300px" data-bind="ntsSearchBox: { targetKey: 'id', mode: 'igGrid', comId: 'grid2', items: items, selectedKey: 'id', fields: ['employeeCode','employeeName']}"></div>
+                <div id="C2_3" style="width: 300px" data-bind="ntsSearchBox: { targetKey: 'id', mode: 'igGrid', comId: 'grid2', items: items, enable: enableSearchButton, selectedKey: 'id', fields: ['employeeCode','employeeName']}"></div>
                 <table id="grid2"></table>
 
 
