--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
@@ -58,6 +58,7 @@
                         comId: 'F3_1',
 	                    items: listStateLinkSettingMaster,
 	                    selectedKey: 'id',
+	                    enable: enableSearchButton,
 	                    fields: ['masterCode', 'categoryName'],
 	                    mode: 'igGrid'}" />
 
