--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
@@ -50,6 +50,7 @@
                                 targetKey: 'id',
                                 comId: 'G3_1',
 	                            items: listStateLinkSettingMaster,
+	                            enable: false,
 	                            selectedKey: 'id',
 	                            fields: ['masterCode', 'categoryName'],
 	                            mode: 'igGrid'}" />
