--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/e/index.xhtml
@@ -48,7 +48,7 @@
             <div style="border-bottom: #CCCCCC 1px solid; width: 840px; margin-top:-10px; margin-bottom: 10px"></div>
             <div>
                 <div style="width: 260px" data-bind="ntsSearchBox: {searchMode: 'highlight', targetKey: 'masterCode', comId: 'E3_1',
-	items: listStateLinkSettingMaster, selectedKey: 'masterCode', selected: currentCode, fields: ['categoryName', 'masterCode'], mode: 'igGrid'}" />
+	items: listStateLinkSettingMaster, enable: enableSearchButton, selectedKey: 'masterCode', selected: currentCode, fields: ['categoryName', 'masterCode'], mode: 'igGrid'}" />
 
                 <table id="E3_1" ></table>
 
