--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
@@ -1,4 +1,5 @@
-<div>
+<div xmlns:ui="http://java.sun.com/jsf/facelets"
+     xmlns:com="http://xmlns.jcp.org/jsf/component">
     <div class="sidebar-content-header" style = "min-width: 1000px;">
 
             <span class = "title">#{i18n.getText('QMM020_11')}</span>
@@ -12,10 +13,13 @@
                     data-bind=" enable: false">#{i18n.getText('QMM020_4')}</button>
 
     </div>
+
     <div style="margin-top: 15px; min-width: 1000px;" class="contents-area" id ="H_CCG" >
-        <div id="com-ccg001"></div>
-        <div id = "H1_1" style="margin-left: 70px; ">
-            <div  tabindex = "4" id="emp-component" style="margin-left: 10px;"></div>
+        <com:ko-if bind="$vm.viewmodelA.selectedH()">
+            <div id="com-ccg001" ></div>
+        </com:ko-if>
+            <div id = "H1_1" style="margin-left: 70px; ">
+                <div  tabindex = "4" id="emp-component" style="margin-left: 10px;"></div>
         </div>
   <!--      <div id="H1_2">
 
