--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -446,7 +446,7 @@
 														value: retrictPreDay,
 														optionsText: 'name',
 														editable: $parent.isEditable,
-														enable: ((appType()==2)||(appType()==9)),
+														enable: true,
 														columns: [
 															{ prop: 'name', length: 4 }
 														]},attr:{
