--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/d.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/d.xhtml
@@ -53,26 +53,31 @@
 	                    <td style="text-align: center;"
 	                        data-bind="if: masterNumericClassification() == 1">
 	                        <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
-	                            <input id="D2_8" data-bind="ntsNumberEditor: { 
-	                            		required: true, 
-	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
-	                            		constraint: 'RangeLowerLimit', 
-	                            		value: rangeLowerLimit, 
-	                            		name: '#[QMM016_30]', 
+								<div tabindex="1">
+									<input id="D2_8" data-bind="ntsNumberEditor: {
+	                            		required: true,
+	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(),
+	                            		constraint: 'RangeLowerLimit',
+	                            		value: rangeLowerLimit,
+	                            		name: '#[QMM016_30]',
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
-	                            <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
-	                            <input id="D2_10" data-bind="ntsNumberEditor: { 
-	                            		required: true, 
-	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
-                            			constraint: 'RangeUpperLimit', 
-                            			value: rangeUpperLimit, 
-                            			name: '#[QMM016_32]', 
+
+								</div>
+	                             <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
+	                           <div tabindex="2">
+								   <input id="D2_10" data-bind="ntsNumberEditor: {
+	                            		required: true,
+	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(),
+                            			constraint: 'RangeUpperLimit',
+                            			value: rangeUpperLimit,
+                            			name: '#[QMM016_32]',
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
+							   </div>
 	                        </div>
 	                    </td>
 	                    <td style="text-align: center;"
 	                        data-bind="if: masterNumericClassification() == 1">
-	                        <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
+	                        <div tabindex="3" data-bind="with: $vm.elementRangeSetting().firstElementRange">
 	                            <input id="D2_11" data-bind="ntsNumberEditor: { 
 	                            		required: true, 
 	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
@@ -91,33 +96,40 @@
 	                    <td style="text-align: center;"
 	                        data-bind="if: masterNumericClassification() == 1">
 	                        <div data-bind="with: $vm.elementRangeSetting().secondElementRange">
-	                            <input id="D2_15" data-bind="ntsNumberEditor: { 
-	                            		required: true, 
-                            			enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
-                            			constraint: 'RangeLowerLimit', 
-                            			value: rangeLowerLimit, 
-                            			name: '#[QMM016_30]', 
+								<div tabindex="4">
+									<input id="D2_15" data-bind="ntsNumberEditor: {
+	                            		required: true,
+                            			enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(),
+                            			constraint: 'RangeLowerLimit',
+                            			value: rangeLowerLimit,
+                            			name: '#[QMM016_30]',
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
-	                            <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
-	                            <input id="D2_17" data-bind="ntsNumberEditor: { 
-	                            		required: true, 
-	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
-	                            		constraint: 'RangeUpperLimit', 
-	                            		value: rangeUpperLimit, 
-	                            		name: '#[QMM016_32]', 
+
+								</div>
+	                             <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
+	                            <div tabindex="5">
+									<input id="D2_17" data-bind="ntsNumberEditor: {
+	                            		required: true,
+	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(),
+	                            		constraint: 'RangeUpperLimit',
+	                            		value: rangeUpperLimit,
+	                            		name: '#[QMM016_32]',
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
+								</div>
 	                        </div>
 	                    </td>
 	                    <td style="text-align: center;"
 	                        data-bind="if: masterNumericClassification() == 1">
 	                        <div data-bind="with: $vm.elementRangeSetting().secondElementRange">
-	                            <input id="D2_18" data-bind="ntsNumberEditor: { 
-	                            		required: true, 
-	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
-	                            		constraint: 'StepIncrement', 
-	                            		value: stepIncrement, 
-	                            		name: '#[QMM016_33]', 
+	                           <div tabindex="6">
+								   <input id="D2_18" data-bind="ntsNumberEditor: {
+	                            		required: true,
+	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(),
+	                            		constraint: 'StepIncrement',
+	                            		value: stepIncrement,
+	                            		name: '#[QMM016_33]',
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
+							   </div>
 	                        </div>
 	                    </td>
 	                </tr>
@@ -129,26 +141,31 @@
 	                    <td style="text-align: center;"
 	                        data-bind="if: masterNumericClassification() == 1">
 	                        <div data-bind="with: $vm.elementRangeSetting().thirdElementRange">
-	                            <input id="D2_22" data-bind="ntsNumberEditor: { 
-	                            		required: true, 
-	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
-	                            		constraint: 'RangeLowerLimit', 
-	                            		value: rangeLowerLimit, 
-	                            		name: '#[QMM016_30]', 
+	                           <div tabindex="7">
+								   <input id="D2_22" data-bind="ntsNumberEditor: {
+	                            		required: true,
+	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(),
+	                            		constraint: 'RangeLowerLimit',
+	                            		value: rangeLowerLimit,
+	                            		name: '#[QMM016_30]',
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
-	                            <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
-	                            <input id="D2_24" data-bind="ntsNumberEditor: { 
-	                            		required: true, 
-	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
-	                            		constraint: 'RangeUpperLimit', 
-	                            		value: rangeUpperLimit, 
-	                            		name: '#[QMM016_32]', 
+
+							   </div>
+	                             <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
+	                            <div tabindex="8">
+									<input id="D2_24" data-bind="ntsNumberEditor: {
+	                            		required: true,
+	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(),
+	                            		constraint: 'RangeUpperLimit',
+	                            		value: rangeUpperLimit,
+	                            		name: '#[QMM016_32]',
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
+								</div>
 	                        </div>
 	                    </td>
 	                    <td style="text-align: center;"
 	                        data-bind="if: masterNumericClassification() == 1">
-	                        <div data-bind="with: $vm.elementRangeSetting().thirdElementRange">
+	                        <div tabindex="9" data-bind="with: $vm.elementRangeSetting().thirdElementRange">
 	                            <input id="D2_25" data-bind="ntsNumberEditor: { 
 	                            		required: true, 
 	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
@@ -163,13 +180,15 @@
             </table>
         </div>
     </div>
-    <div class="tab-row" style="margin-left: 75px; width: 500px; text-align: center;">
+    <div tabindex="10" class="tab-row" style="margin-left: 75px; width: 500px; text-align: center;">
         <button data-bind="click: $vm.createThreeDimensionWageTable" style="width: 400px;"
                 class="caret-bottom large-caret large">#{i18n.getText('QMM016_35')}</button>
     </div>
     <div class="tab-row" style="margin-top: 40px;">
         <div data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_36')}</div>
-        <button style="margin-left: 30px;">#{i18n.getText('QMM016_37')}</button>
+        <div tabindex="11">
+			<button style="margin-left: 30px;">#{i18n.getText('QMM016_37')}</button>
+		</div>
     </div>
     <hr></hr>
     <div class="tab-row ui-iggrid" data-bind="if: $vm.wageTableContent().payment().length > 0">
@@ -183,7 +202,8 @@
 		                         data-bind="with: selectedWageTable().elementInformation().threeDimensionElement">
 		                        <div data-bind="text: elementName"></div>
 		                    </div>
-		                    <div style="vertical-align: middle;" id="combo-box" data-bind="ntsComboBox: {
+		                    <div tabindex="12">
+								<div style="vertical-align: middle;" id="combo-box" data-bind="ntsComboBox: {
 	                     		options: $vm.listThirdDimension,
 			                     optionsValue: 'value',
 			                     width: '150px',
@@ -196,6 +216,7 @@
 			                         { prop: 'fixed_length', length: 4 },
 			                         { prop: 'name', length: 10 },
 			                     ]}"></div>
+							</div>
 						</div>
 						<img src="../resource/＃QMM017_8.png"></img>
 	                </td>
@@ -263,7 +284,7 @@
 					                <tr>
 					                    <com:ko bind="listSecondDms" tag="foreach">
 								            <td style="border: 1px solid #CCC; vertical-align: middle;">
-					 				            <div style="height: 32px; width: 150px; text-align: center;">
+					 				            <div tabindex="13" style="height: 32px; width: 150px; text-align: center;">
 					 				            	<input class="input-amount" data-bind="ntsNumberEditor: {
 						  								option: { grouplength: 3, width: '120px' }, 
 						   								name: '#[QMM016_39]', 
