--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
@@ -95,7 +95,7 @@
             </div>
             <div id="fixed-flex-layout-right">
                 <!--A3_1 タブ-->
-                <div id="A3_1" data-bind="ntsTabPanel: { dataSource: tabs, active: selectedTab}"
+                <div id="A3_1" tabindex="11" data-bind="ntsTabPanel: { dataSource: tabs, active: selectedTab}"
                      style="min-width: 800px; margin-bottom: 20px;">
                     <!--A3_2 タブ（基本情報）-->
                     <div class="tab-content-1" data-bind="with: selectedWageTable">
@@ -108,25 +108,34 @@
                             <div id="A5_1" class="column-1"
                                  data-bind="ntsFormLabel: {required: true, constraint: ['WageTableCode', 'WageTableName']}">#{i18n.getText('QMM016_8')}</div>
                             <!--A5_2 コード-->
-                            <input id="A5_2" tabindex="11"
-                                   data-bind="ntsTextEditor: {constraint: 'WageTableCode', value: wageTableCode, name: '#[QMM016_14]', required: true , enable: $vm.updateMode() == false}"/>
-                            <!--A5_3 名称-->
-                            <input style="margin-left: 15px;" id="A5_3" tabindex="12" width="230px"
-                                   data-bind="ntsTextEditor: {constraint: 'WageTableName',value: wageTableName, name: '#[QMM016_15]', required: true}"/>
-                        </div>
+                            <div  tabindex="12">
+                                <input id="A5_2"
+                                       data-bind="ntsTextEditor: {constraint: 'WageTableCode', value: wageTableCode, name: '#[QMM016_14]', required: true , enable: $vm.updateMode() == false}"/>
+
+                            </div>
+                            <div tabindex="13">
+                                <!--A5_3 名称-->
+                                <input style="margin-left: 15px;" id="A5_3"  width="230px"
+                                       data-bind="ntsTextEditor: {constraint: 'WageTableName',value: wageTableName, name: '#[QMM016_15]', required: true}"/>
+
+                            </div>
+                         </div>
                         <div class="flex valign-center tab-row" data-bind="with: $vm.selectedHistory">
                             <!--A6_1 開始年月-->
                             <div id="A6_1" class="column-1"
                                  data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM016_16')}</div>
                             <!--A6_2 開始年月（西暦）-->
-                            <div id="A6_2" tabindex="13"
-                                 data-bind="ntsDatePicker: {
+                            <div tabindex="14">
+                                <div id="A6_2"
+                                     data-bind="ntsDatePicker: {
                                     name: '#[QMM016_16]',
                                     value: startMonth,
                                     dateFormat: 'yearmonth',
                                     valueFormat: 'YYYYMM',
                                     required: true,
                                     enable: !$vm.updateMode()}"/>
+                            </div>
+
                             <!--A6_3 開始年月（和暦）-->
                             <div style="margin-left: 10px;" id="A6_3"
                                  data-bind="text: displayJapanStartYearMonth"/>
@@ -141,8 +150,8 @@
                                 <!--A7_3 罫線-->
                                 <hr></hr>
                                 <!--A7_4 利用次元区分-->
-                                <div class="flex valign-center tab-row">
-                                    <div id="A7_4_1" class="cf" tabindex="14" data-bind="ntsSwitchButton: {
+                                <div tabindex="15" class="flex valign-center tab-row">
+                                    <div id="A7_4_1" class="cf"  data-bind="ntsSwitchButton: {
                                         name: '#[QMM016_19]',
                                         options: elementSettingItem1,
                                         optionsValue: 'value',
@@ -201,8 +210,8 @@
 	                                        <th class="ui-widget-header" style="text-align: center;">#{i18n.getText('QMM016_29')}</th>
 	                                        <td data-bind="if: elementSetting() == 0 || elementSetting() == 1 || elementSetting() == 2">
 	                                            <!--A8_5 参照ボタン1-->
-	                                            <div>
-	                                                <button tabindex="15" class="small" id="A8_5"
+	                                            <div tabindex="16">
+	                                                <button  class="small" id="A8_5"
 	                                                        data-bind="click: function(){$vm.selectElement(1)}, enable: !$vm.updateMode()">#{i18n.getText('QMM016_23')}</button>
 	                                            </div>
 	                                            <!--A8_6 選択要素1-->
@@ -217,8 +226,8 @@
 	                                            class="ui-widget-header">#{i18n.getText('QMM016_40')}</th>
 	                                        <td data-bind="if: elementSetting() == 1 || elementSetting() == 2">
 	                                            <!--A8_8 参照ボタン2-->
-	                                            <div>
-	                                                <button tabindex="16" class="small" id="A8_8"
+	                                            <div tabindex="17">
+	                                                <button  class="small" id="A8_8"
 	                                                        data-bind="click: function(){$vm.selectElement(2)}, enable: !$vm.updateMode()">#{i18n.getText('QMM016_23')}</button>
 	                                            </div>
 	                                            <!--A8_9 選択要素2-->
@@ -233,9 +242,12 @@
 	                                            class="ui-widget-header">#{i18n.getText('QMM016_44')}</th>
 	                                        <td data-bind="if: elementSetting() == 2">
 	                                            <!--A8_11 参照ボタン3-->
-	                                            <button tabindex="17" class="small" id="A8_11"
-	                                                    data-bind="click: function(){$vm.selectElement(3)}, enable: !$vm.updateMode()">#{i18n.getText('QMM016_23')}</button>
-	                                            <!--A8_12 選択要素3-->
+                                                <div tabindex="18">
+                                                    <button  class="small" id="A8_11"
+                                                             data-bind="click: function(){$vm.selectElement(3)}, enable: !$vm.updateMode()">#{i18n.getText('QMM016_23')}</button>
+
+                                                </div>
+	                                             <!--A8_12 選択要素3-->
 	                                            <div data-bind="with: elementInformation().threeDimensionElement">
 	                                                <div data-bind="text: elementName"></div>
 	                                            </div>
@@ -250,7 +262,7 @@
                             <div id="A9_1" style="vertical-align: top" class="column-1"
                                  data-bind="ntsFormLabel: { constraint: 'Memo', required: false }">#{i18n.getText('QMM016_24')}</div>
                             <!--A9_2 メモ欄-->
-                            <textarea id="A9_2" tabindex="18" style="height: 80px; width: 400px;"
+                            <textarea id="A9_2" tabindex="19" style="height: 80px; width: 400px;"
                                       data-bind="ntsMultilineEditor: { constraint: 'Memo', value: remarkInformation, name: '#[QMM016_25]'}"/>
                         </div>
 
