--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/g/index.xhtml
@@ -18,8 +18,8 @@
     <ui:define name="content">
         <div id="contents-area">
             <div style = "color: white">to fix scroll</div>
-            <div  style="margin-left: 40px;margin-top: 20px">
-                <table id="G2_1" tabindex="1"
+            <div  tabindex="1" style="margin-left: 40px;margin-top: 20px">
+                <table id="G2_1"
                        data-bind="ntsGridList: {
                         rows: 15,
                         name: '#[QMM016_56]',
@@ -35,9 +35,15 @@
             </div>
         </div>
         <div id="functions-area-bottom">
-            <button tabindex="2" class="x-large proceed "
-                    data-bind="click: decideSelect, enable: selectedStatementItemName().length > 0">#{i18n.getText('QMM016_54')}</button>
-            <button tabindex="3" class="large" data-bind="click: cancelSelect">#{i18n.getText('QMM016_55')}</button>
+            <div tabindex="2">
+                <button  class="x-large proceed "
+                         data-bind="click: decideSelect, enable: selectedStatementItemName().length > 0">#{i18n.getText('QMM016_54')}</button>
+
+            </div>
+            <div tabindex="3">
+                <button  class="large" data-bind="click: cancelSelect">#{i18n.getText('QMM016_55')}</button>
+            </div>
+
         </div>
     </ui:define>
 
