--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/h/index.xhtml
@@ -28,21 +28,31 @@
 
     <ui:define name="content">
         <div id="functions-area">
-            <button data-bind="click: createQualificationGroup , enable: screenMode() == 1">#{i18n.getText('QMM016_1')}</button>
-            <button class="proceed" data-bind="click: registerQualificationGroup,enable: $root.errors.isEmpty"
-                    >#{i18n.getText('QMM016_2')}</button>
-            <button class="danger"
-                    data-bind="click: deleteQualificationGroup , enable: screenMode() == 1">#{i18n.getText('QMM016_58')}</button>
-            <button data-bind="click: closeDialog">#{i18n.getText('QMM016_59')}</button>
+            <div tabindex="1">
+                <button data-bind="click: createQualificationGroup , enable: screenMode() == 1">#{i18n.getText('QMM016_1')}</button>
+
+            </div>
+            <div tabindex="2">
+                <button class="proceed" data-bind="click: registerQualificationGroup,enable: $root.errors.isEmpty"
+                >#{i18n.getText('QMM016_2')}</button>
+            </div>
+            <div tabindex="3">
+                <button class="danger"
+                        data-bind="click: deleteQualificationGroup , enable: screenMode() == 1">#{i18n.getText('QMM016_58')}</button>
+
+            </div>
+            <div tabindex="4">
+                <button data-bind="click: closeDialog">#{i18n.getText('QMM016_59')}</button>
+            </div>
         </div>
         <div id="contents-area" class="fixed-flex-layout">
             <div id="content-left" class="fixed-flex-layout-left">
-                <div data-bind="ntsPanel:{width: '240px', height: '420px', direction: 'right', showIcon: true, visible: true}"
+                <div tabindex="5" data-bind="ntsPanel:{width: '240px', height: '420px', direction: 'right', showIcon: true, visible: true}"
                      style="margin-left: 10px; margin-bottom: 20px;">
                     <div style="width: 240px"
                          data-bind="ntsSearchBox: {searchMode: 'highlight',targetKey: 'qualificationGroupCode', comId: 'H2_3',
                         items: qualificationGroupList, selected: selectedQualificationGroupCode, selectedKey: 'laborOfficeCode', fields: ['qualificationGroupCode', 'qualificationGroupName'], mode: 'igGrid'}"/>
-                    <table id="H2_3"
+                    <table tabindex="6"  id="H2_3"
                            data-bind="ntsGridList: {
                             rows: 15,
                             name: '#[QMM016_60]',
@@ -62,11 +72,17 @@
                 <div class="control-group valign-center" data-bind = "with: selectedQualification">
                     <div class="column-1"
                          data-bind="ntsFormLabel: {required: true, constraint: ['QualificationGroupCode', 'QualificationGroupName']}">#{i18n.getText('QMM016_8')}</div>
-                    <input id = "H3_1"
-                           data-bind="ntsTextEditor: {constraint: 'QualificationGroupCode', value: qualificationGroupCode, name: '#[QMM016_61]', required: true , enable: $vm.screenMode() == 0}"/>
-                    <input id = "H3_2" style="margin-left: 5px;"
-                           data-bind="ntsTextEditor: {constraint: 'QualificationGroupName',value: qualificationGroupName, name: '#[QMM016_62]', required: true}"/>
-                </div>
+                    <div tabindex="7">
+                        <input id = "H3_1"
+                               data-bind="ntsTextEditor: {constraint: 'QualificationGroupCode', value: qualificationGroupCode, name: '#[QMM016_61]', required: true , enable: $vm.screenMode() == 0}"/>
+
+                    </div>
+                         <div tabindex="8">
+                            <input id = "H3_2" style="margin-left: 5px;"
+                                   data-bind="ntsTextEditor: {constraint: 'QualificationGroupName',value: qualificationGroupName, name: '#[QMM016_62]', required: true}"/>
+
+                        </div>
+                         </div>
                 <div data-bind = "with: selectedQualification" class="control-group valign-center" style="width: 631px">
                     <div class="column-1"
                          data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM016_51')}</div>
@@ -89,7 +105,7 @@
                 </div>
                 <div class="panel panel-frame">
                 	<div class="pull-left control-group" style="width: 43%; padding-left: 10px">
-                		<div data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_64')}</div>
+                		<div tabindex="9" data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_64')}</div>
                 		<hr/>
                 	</div>
                 	<div class="pull-right control-group" style="width: 43%; padding-right: 10px">
@@ -97,7 +113,7 @@
                 		<hr/>
                 	</div>
                     <div class="flex valign-center row" style="clear: both; padding-left: 10px; padding-right: 10px">
-                        <div id="swap-list" data-bind="ntsSwapList: {
+                        <div tabindex="10" id="swap-list" data-bind="ntsSwapList: {
                             showSearchBox: { showLeft : true, showRight: false},
                             height: 330,
                             dataSource: qualificationInformationList,
